force-app/main/default/objects/Study_Funding__c/Study_Funding__c.object-meta.xml
<CustomObject>
    <description>The scholarship or government loan available in the educational institution.</description>
    <label>Study Funding</label>
    <nameField>
        <label>Study Funding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Fundings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>