force-app/main/default/objects/Study_Funding__c/fields/Allow_Excess_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Allow_Excess_Disbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the unused funding is payable to students.</description>
    <inlineHelpText>Indicates that the unused funding is payable to students.</inlineHelpText>
    <label>Allow Excess Disbursement</label>
    <type>Checkbox</type>
</CustomField>