force-app/main/default/objects/Study_Funding__c/fields/Applicable_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Item_Type__c</fullName>
    <description>The item type that the study funding can pay for. Leave blank for all types.</description>
    <inlineHelpText>The item type that the study funding can pay for. Leave blank for all types.</inlineHelpText>
    <label>Applicable Item Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Applicable_to_Specific_Types__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Transaction_Item_Type</valueSetName>
    </valueSet>
</CustomField>