force-app/main/default/objects/Study_Funding__c/fields/Applicable_to_Specific_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_to_Specific_Types__c</fullName>
    <inlineHelpText>To specify Applicable Item Type for this study funding</inlineHelpText>
    <label>Applicable to Specific Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>