force-app/main/default/objects/Study_Funding__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The code to identify the study funding.</description>
    <inlineHelpText>The code to identify the study funding.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>