force-app/main/default/objects/Study_Funding__c/fields/Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Study Fundings</relationshipLabel>
    <relationshipName>Study_Funding_Available</relationshipName>
    <type>Lookup</type>
</CustomField>