force-app/main/default/objects/Study_Funding__c/fields/Primary_Funder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Funder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Funder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Study Fundings (Primary Funder)</relationshipLabel>
    <relationshipName>Study_Funding_Funded</relationshipName>
    <type>Lookup</type>
</CustomField>