force-app/main/default/objects/Study_Funding__c/fields/Repayable__c.field-meta.xml
<CustomField>
    <fullName>Repayable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the funding is a repayable (e.g., loan) or non repayable (e.g., scholarship).</description>
    <inlineHelpText>Indicates that the funding is a repayable (e.g., loan) or non repayable (e.g., scholarship).</inlineHelpText>
    <label>Repayable</label>
    <type>Checkbox</type>
</CustomField>