force-app/main/default/objects/Study_Funding__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>To prioritize the funding when there are multiple records of the same transaction type.</description>
    <inlineHelpText>To prioritize the funding when there are multiple records of the same transaction type.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>