force-app/main/default/objects/Study_Funding__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scholarship</fullName>
                <default>true</default>
                <label>Scholarship</label>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Private Student Loan</fullName>
            </value>
            <value>
                <fullName>Federal Student Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>