force-app/main/default/objects/Study_Funding__c/validationRules/Required_ApplicableToSpecificType.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_ApplicableToSpecificType</fullName>
    <active>true</active>
    <description>To ensure Applicable ItemType is set if Applicable to Specific Type is Yes.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Applicable_to_Specific_Types__c, &apos;Yes&apos;),
ISBLANK(Applicable_Item_Type__c)
)</errorConditionFormula>
    <errorDisplayField>Applicable_Item_Type__c</errorDisplayField>
    <errorMessage>Please select at least one applicable item type.</errorMessage>
</ValidationRule>