force-app/main/default/objects/Study_Funding__c/listViews/Active_Study_Fundings.listView-meta.xml
<ListView>
    <fullName>Active_Study_Fundings</fullName>
    <columns>NAME</columns>
    <columns>Educational_Institution__c</columns>
    <columns>Primary_Funder__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Study Fundings</label>
</ListView>